some overall fix

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = YOUR_MONGO_DB
+MONGODB_URL = mongodb+srv://admin:admin1234567890@cluster0.p9lx3pr.mongodb.net/?retryWrites=true&w=majority
 
 ACCESS_TOKEN_SECRET = youraccesstokensecret
 REFRESH_TOKEN_SECRET = yourrefreshtokensecret
