--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
   "name": "client",
-  "proxy": "http://localhost:5001",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +7,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "axios": "^0.21.1",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.1",
     "peerjs": "^1.3.2",
     "react": "^17.0.1",
